--- a/index.html
+++ b/index.html
@@ -16,30 +16,42 @@
           <ul id="menu">
             <li id="active"><a href="">About the shelter</a></li>
             <li><a href="pages/ourPets.html">Our pets</a></li>
-            <li><a href="#thirdBlock">Help the shelter</a></li>
+            <li><a href="#help">Help the shelter</a></li>
             <li><a href="#footer">Contacts</a></li>
           </ul>
         </nav>
+        <div class="hamburger-menu">
+          <input id="menu__toggle" type="checkbox" />
+          <label class="menu__btn" for="menu__toggle">
+            <span></span>
+          </label>
+          <ul class="menu__box">
+            <li class="menu__item">About the shelter</li>
+            <li class="menu__item">Our pets</li>
+            <li class="menu__item">Help the shelter</li>
+            <li class="menu__item">Contacts</li>
+          </ul>
+        </div>
       </header>
       <div id="notOnly">
         <div id="annotation">
           <h2>Not only people need a house</h2>
           <p>We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!</p>
-          <a href="#secondBlock"><button id="makeBtn">Make a friend</button></a>
+          <div id="btnWrap"><a href="#secondBlock"><button id="makeBtn">Make a friend</button></a></div>
         </div>
         <img src="images/start-screen-puppy.png" alt="Puppy">
       </div>
     </div>
     <article id="blocks">
-      <div id="firstBlock">
+      <div id="aboutUs">
         <img src="images/about-pets.png" alt="Pets">
-        <div id="text-block">
+        <div id="text-block_aboutUs">
           <h3>About the shelter “Cozy House”</h3>
           <p>Currently we have 121 dogs and 342 cats on our hands and statistics show that only 20% of them will find a family. The others will continue to live with us and will be waiting for a lucky chance to become dearly loved.</p>
           <p>We feed our wards with the best food and make sure that they do not get sick, feel comfortable (including psychologically) and well. We are supported by 87 volunteers and 28 employees of various skill levels. About 12% of the animals are taken by the shelter staff. Taking care of the animals, they become attached to the pets and would hardly ever leave them alone.</p>
         </div>
       </div>
-      <div id="secondBlock">
+      <div id="ourFriends">
         <h3>Our friends who <br> are looking for a house</h3>
         <div id="cardsBlock">
           <button id="btnArrow1"><img src="images/icons/Arrow.png" alt="Prev"></button>
@@ -62,7 +74,7 @@
         </div>
         <div id="btnWrapper"><a href="pages/ourPets.html"><button id="getBtn">Get to know the rest</button></a></div>
       </div>
-      <div id="thirdBlock">
+      <div id="help">
         <h3>How you can help <br> our shelter</h3>
         <div id="icons">
           <div id="icon"><img src="images/icons/icon-pet-food.svg" alt="pet-food"><span>Pet food</span></div>
@@ -76,7 +88,7 @@
           <div id="icon"><img src="images/icons/icon-sleeping-area.svg" alt="sleeping-area"><span>Sleeping areas</span></div>
         </div>
       </div>
-      <div id="fourthBlock">
+      <div id="donation">
         <img src="images/donation-dog.png" alt="Dog">
         <div id="donateInfo">
           <h3>You can also make a donation</h3>
@@ -89,13 +101,13 @@
     <footer class="footer" id="footer">
       <div id="contacts">
         <h3>For questions and suggestions</h3>
-        <a href="mailto:email@shelter.com"><img src="images/icons/icon-email.svg" alt="email"></a><h4>email@shelter.com</h4>
-        <a href="tel:+136745677554"><img src="images/icons/icon-phone.svg" alt="phone"></a><h4>+13 674 567 75 54</h4>
+        <a href="mailto:email@shelter.com"><img src="images/icons/icon-email.svg" alt="email"><h4>email@shelter.com</h4></a>
+        <a href="tel:+136745677554"><img src="images/icons/icon-phone.svg" alt="phone"><h4>+13 674 567 75 54</h4></a>
       </div>
       <div id="adress">
         <h3>We are waiting for your visit</h3>
-        <a href="https://www.google.com/maps/place/%D0%91%D0%BE%D1%81%D1%82%D0%BE%D0%BD,+%D0%92%D0%B5%D0%BB%D0%B8%D0%BA%D0%BE%D0%B1%D1%80%D0%B8%D1%82%D0%B0%D0%BD%D0%B8%D1%8F/@52.9784072,-0.0389212,14z/data=!3m1!4b1!4m5!3m4!1s0x47d7c2c53856f733:0x8406d541f1a0910c!8m2!3d52.97894!4d-0.026577?hl=ru" target="_blank"><img src="images/icons/icon-marker.png" alt="marker"></a><h4>1 Central Street, Boston (entrance from the store)</h4>
-        <a href="https://www.google.com/maps/place/%D0%9B%D0%BE%D0%BD%D0%B4%D0%BE%D0%BD,+%D0%92%D0%B5%D0%BB%D0%B8%D0%BA%D0%BE%D0%B1%D1%80%D0%B8%D1%82%D0%B0%D0%BD%D0%B8%D1%8F/@51.5287718,-0.2416804,11z/data=!3m1!4b1!4m5!3m4!1s0x47d8a00baf21de75:0x52963a5addd52a99!8m2!3d51.5072178!4d-0.1275862?hl=ru" target="_blank"><img src="images/icons/icon-marker.png" alt="marker"></a><h4>18 South Park, London </h4>
+        <a href="https://www.google.com/maps/place/%D0%91%D0%BE%D1%81%D1%82%D0%BE%D0%BD,+%D0%92%D0%B5%D0%BB%D0%B8%D0%BA%D0%BE%D0%B1%D1%80%D0%B8%D1%82%D0%B0%D0%BD%D0%B8%D1%8F/@52.9784072,-0.0389212,14z/data=!3m1!4b1!4m5!3m4!1s0x47d7c2c53856f733:0x8406d541f1a0910c!8m2!3d52.97894!4d-0.026577?hl=ru" target="_blank"><img src="images/icons/icon-marker.png" alt="marker"><h4>1 Central Street, Boston (entrance from the store)</h4></a>
+        <a href="https://www.google.com/maps/place/%D0%9B%D0%BE%D0%BD%D0%B4%D0%BE%D0%BD,+%D0%92%D0%B5%D0%BB%D0%B8%D0%BA%D0%BE%D0%B1%D1%80%D0%B8%D1%82%D0%B0%D0%BD%D0%B8%D1%8F/@51.5287718,-0.2416804,11z/data=!3m1!4b1!4m5!3m4!1s0x47d8a00baf21de75:0x52963a5addd52a99!8m2!3d51.5072178!4d-0.1275862?hl=ru" target="_blank"><img src="images/icons/icon-marker.png" alt="marker"><h4>18 South Park, London</h4></a>
       </div>
       <img src="images/footer-puppy.png" alt="Puppy" id="footer-puppy">
     </footer>
