--- a/pages/ourPets.html
+++ b/pages/ourPets.html
@@ -15,10 +15,22 @@
         <ul id="menu">
           <li><a href="../index.html">About the shelter</a></li>
           <li id="active"><a href="#">Our pets</a></li>
-          <li><a href="../index.html#thirdBlock">Help the shelter</a></li>
+          <li><a href="../index.html#help">Help the shelter</a></li>
           <li><a href="#footer">Contacts</a></li>
         </ul>
       </nav>
+      <div class="hamburger-menu">
+        <input id="menu__toggle" type="checkbox" />
+        <label class="menu__btn" for="menu__toggle">
+          <span id="partOfBurger"></span>
+        </label>
+        <ul class="menu__box">
+          <li class="menu__item">About the shelter</li>
+          <li class="menu__item">Our pets</li>
+          <li class="menu__item">Help the shelter</li>
+          <li class="menu__item">Contacts</li>
+        </ul>
+      </div>
     </header>
     <article id="ourFriends">
       <h3>Our friends who <br> are looking for a house</h3>
@@ -79,13 +91,13 @@
     <footer class="footer" id="footer">
       <div id="contacts">
         <h3>For questions and suggestions</h3>
-        <a href="mailto:email@shelter.com"><img src="../images/icons/icon-email.svg" alt="email"></a><h4>email@shelter.com</h4>
-        <a href="tel:+136745677554"><img src="../images/icons/icon-phone.svg" alt="phone"></a><h4>+13 674 567 75 54</h4>
+        <a href="mailto:email@shelter.com"><img src="../images/icons/icon-email.svg" alt="email"><h4>email@shelter.com</h4></a>
+        <a href="tel:+136745677554"><img src="../images/icons/icon-phone.svg" alt="phone"><h4>+13 674 567 75 54</h4></a>
       </div>
       <div id="adress">
         <h3>We are waiting for your visit</h3>
-        <a href="https://www.google.com/maps/place/%D0%91%D0%BE%D1%81%D1%82%D0%BE%D0%BD,+%D0%92%D0%B5%D0%BB%D0%B8%D0%BA%D0%BE%D0%B1%D1%80%D0%B8%D1%82%D0%B0%D0%BD%D0%B8%D1%8F/@52.9784072,-0.0389212,14z/data=!3m1!4b1!4m5!3m4!1s0x47d7c2c53856f733:0x8406d541f1a0910c!8m2!3d52.97894!4d-0.026577?hl=ru" target="_blank"><img src="../images/icons/icon-marker.png" alt="marker"></a><h4>1 Central Street, Boston (entrance from the store)</h4>
-        <a href="https://www.google.com/maps/place/%D0%9B%D0%BE%D0%BD%D0%B4%D0%BE%D0%BD,+%D0%92%D0%B5%D0%BB%D0%B8%D0%BA%D0%BE%D0%B1%D1%80%D0%B8%D1%82%D0%B0%D0%BD%D0%B8%D1%8F/@51.5287718,-0.2416804,11z/data=!3m1!4b1!4m5!3m4!1s0x47d8a00baf21de75:0x52963a5addd52a99!8m2!3d51.5072178!4d-0.1275862?hl=ru" target="_blank"><img src="../images/icons/icon-marker.png" alt="marker"></a><h4>18 South Park, London </h4>
+        <a href="https://www.google.com/maps/place/%D0%91%D0%BE%D1%81%D1%82%D0%BE%D0%BD,+%D0%92%D0%B5%D0%BB%D0%B8%D0%BA%D0%BE%D0%B1%D1%80%D0%B8%D1%82%D0%B0%D0%BD%D0%B8%D1%8F/@52.9784072,-0.0389212,14z/data=!3m1!4b1!4m5!3m4!1s0x47d7c2c53856f733:0x8406d541f1a0910c!8m2!3d52.97894!4d-0.026577?hl=ru" target="_blank"><img src="../images/icons/icon-marker.png" alt="marker"><h4>1 Central Street, Boston (entrance from the store)</h4></a>
+        <a href="https://www.google.com/maps/place/%D0%9B%D0%BE%D0%BD%D0%B4%D0%BE%D0%BD,+%D0%92%D0%B5%D0%BB%D0%B8%D0%BA%D0%BE%D0%B1%D1%80%D0%B8%D1%82%D0%B0%D0%BD%D0%B8%D1%8F/@51.5287718,-0.2416804,11z/data=!3m1!4b1!4m5!3m4!1s0x47d8a00baf21de75:0x52963a5addd52a99!8m2!3d51.5072178!4d-0.1275862?hl=ru" target="_blank"><img src="../images/icons/icon-marker.png" alt="marker"><h4>18 South Park, London </h4></a>
       </div>
       <img src="../images/footer-puppy.png" alt="Puppy" id="footer-puppy">
     </footer>
